Revert "Refactoring Testing"
This reverts commit b873aa911a8d91c8c2dfbc1fd3a4134f243e690a.